fixed url-overflow

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ img {
 }
 
 #form_url {
-    width: 60%;
+    width: 470px;
     text-align: center;
     overflow-wrap: break-word;
     word-wrap: break-word;
